<resources>
    <string name="app_name">Path finding</string>

    <string name="a_star">A*</string>
    <string name="depth_first">DFS</string>
    <string name="breath_first">BFS</string>
    <string name="load_graph">LOAD GRAPH</string>
    <string name="reset_graph">RESET GRAPH</string>
    <string name="draw_barrier">Draw barrier</string>
    <string name="erase">Erase</string>
    <string name="hello">Hello</string>

    <string name="eraser">Eraser</string>
    <string name="brush">Brush</string>

    <string name="path_not_found">Path not found</string>

    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="save_graph">Enter graph name</string>

    <string name="menu_run">Menu run</string>
    <string name="menu_save">Menu save</string>
    <string name="menu_settings">Settings</string>

    <string name="loading_graph">Loading graph</string>
    <string name="confirm">CONFIRM</string>

    <string name="waiting">Waiting for content...</string>
    <string name="delete">DELETE</string>

    <string name="deleting_graph">Deleting graph</string>

    <string name="pref_username">pref_username</string>
    <string name="username">Username</string>
    <string name="set_username">Set username</string>
    <string name="human">human</string>
</resources>