<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroupSelectPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioButtonAStar"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <RadioButton
            android:id="@+id/radioButtonAStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_star"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radioButtonDepthFirstSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depth_first"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radioButtonBreathFirstSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breath_first"
            android:textStyle="bold"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonLoadGraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/load_graph"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="loadGraph"
        app:layout_constraintBottom_toTopOf="@id/buttonReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_graph"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="resetGraph"
        app:layout_constraintBottom_toTopOf="@+id/textViewDrawBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewDrawBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw_barrier"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/tableLayoutGraph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageViewBarrierDrag"/>

    <ImageView
        android:id="@+id/imageViewBarrierDrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/brush"
        app:srcCompat="@drawable/ic_outline_brush_24"
        app:layout_constraintTop_toTopOf="@id/textViewDrawBarrier"
        app:layout_constraintStart_toEndOf="@id/textViewDrawBarrier"
        app:layout_constraintEnd_toStartOf="@id/textViewErase" />

    <TextView
        android:id="@+id/textViewErase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erase"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/imageViewBarrierDrag"
        app:layout_constraintStart_toEndOf="@id/imageViewBarrierDrag"
        app:layout_constraintEnd_toStartOf="@id/imageViewEraseDrag"/>

    <ImageView
        android:id="@+id/imageViewEraseDrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/eraser"
        app:srcCompat="@drawable/ic_baseline_circle_24"
        app:layout_constraintTop_toTopOf="@id/textViewErase"
        app:layout_constraintStart_toEndOf="@id/textViewErase"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableLayout
        android:id="@+id/tableLayoutGraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSelectPath"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>